Experiments on wmo files - detecting block in their chunked structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Tools)
 
 aux_source_directory(./src/dbc SRC_DBC)
 aux_source_directory(./src/wdt SRC_WDT)
+aux_source_directory(./src/wmo SRC_WMO)
 
 add_executable(Dbc ${SRC_DBC})
 add_executable(Wdt ${SRC_WDT})
+add_executable(Wmo ${SRC_WMO})
